[project]
name = "kronoterm2mqtt"
dynamic = ["version"]
description = "Sends MQTT events from KRONOTERM heat pump"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = [
    {name = 'Leon Kos', email = 'leon.kos@lecad.fs.uni-lj.si'}
]
requires-python = ">=3.11, <4"
dependencies = [
    "ha-services <= 2.9.0",  # https://github.com/jedie/ha-services
    "cli-base-utilities",  # https://github.com/jedie/cli-base-utilities
    "bx_py_utils",  # https://github.com/boxine/bx_py_utils
    "tyro",  # https://github.com/brentyi/tyro # https://github.com/brentyi/tyro
    "rich",  # https://github.com/Textualize/rich # https://github.com/Textualize/rich
    "pymodbus[serial] >= 3.8.0",  # https://github.com/pymodbus-dev/pymodbus/
]

[dependency-groups]
dev = [
    "manageprojects",  # https://github.com/jedie/manageprojects
    "urllib3", # for bx_py_utils.test_utils.deny_requests.deny_any_real_request() in tests
    "uv",  # https://github.com/astral-sh/uv
    "setuptools",  # https://github.com/pypa/setuptools
    "nox",  # https://github.com/wntrblm/nox
    "coverage",  # https://github.com/nedbat/coveragepy
    "autopep8",  # https://github.com/hhatto/autopep8
    "pyupgrade",  # https://github.com/asottile/pyupgrade
    "flake8",  # https://github.com/pycqa/flake8
    "flake8-bugbear",  # https://github.com/PyCQA/flake8-bugbear
    "pyflakes",  # https://github.com/PyCQA/pyflakes
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "pre-commit",  # https://github.com/pre-commit/pre-commit
    "typeguard",  # https://github.com/agronholm/typeguard/
    #"platformio", # https://github.com/platformio/platformio-core
    "darker[flynt, isort, color]",
]

[project.urls]
Documentation = "https://github.com/kosl/kronoterm2mqtt"
Source = "https://github.com/kosl/kronoterm2mqtt"

[project.scripts]
kronoterm2mqtt_app = "kronoterm2mqtt.__main__:main"
kronoterm2mqtt_dev = "kronoterm2mqtt.cli_dev:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kronoterm2mqtt*"]

[tool.setuptools.dynamic]
version = {attr = "kronoterm2mqtt.__version__"}

[tool.cli_base.pip_audit]
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[]

[tool.cli_base]
version_module_name = "kronoterm2mqtt"  # Used by "update-readme-history" git hook

[tool.darker]
src = ['kronoterm2mqtt']
revision = "origin/main..."
line_length = 119
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=['.*', '*/htmlcov/*']
known_first_party=['kronoterm2mqtt']
line_length=119
lines_after_imports=2


[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['kronoterm2mqtt']
command_line = '-m unittest --verbose --locals --buffer'

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 25
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "765b8fb"
initial_date = 2024-03-12T09:08:01+01:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "uv-python"

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Leon Kos"
github_username = "kosl"
author_email = "leon.kos@lecad.fs.uni-lj.si"
package_name = "kronoterm2mqtt"
package_version = "0.1.11"
package_description = "Sends MQTT events from KRONOTERM device"
package_url = "https://github.com/kosl/kronoterm2mqtt"
issues_url = "https://github.com/kosl/kronoterm2mqtt/issues"
license = "GPL-3.0-or-later"
_template = "https://github.com/kosl/cookiecutter_templates/"
